# wictionary

./: .gitignore  README.md  pyproject.toml
wictionary/: manage.py
wictionary/common/: models.py
wictionary/config/: asgi.py  settings.py  urls.py  wsgi.py
wictionary/wictionary/: asgi.py  settings.py  urls.py  wsgi.py
wictionary/word/: admin.py  apis.py  models.py  serializers.py  urls.py
wictionary/word/migrations/: 0001_initial.py
